Add NAS availability check

--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -7,6 +7,7 @@ generic__database_backup_storage_account_key: null
 generic__database_backup_storage_account_path: ENC[AES256_GCM,data:X+9RSvQYb70iNQZ++qwujtA=,iv:fOgASRH7082DDnsX8pIVarhN/JT2dtteWnawFlM0edw=,tag:hOiO/2fiaZ93tCb8fEHYBw==,type:str]
 generic__database_backup_storage_account_mode: ENC[AES256_GCM,data:AVDA8w==,iv:Ip+3pu5P8EfoScpn9gT6KRmlJRDE+wXEOTF6+PtXmPU=,tag:XshJRPZbyo9r4EnOuIeqWQ==,type:str]
 generic__ips_traefik: ENC[AES256_GCM,data:IRsIbfTS8IdwTZpfHdfk,iv:L+z1q+PHjSYr7X4t2NQOcaiS9qgaPhd8rWi19G+TVGA=,tag:ioIXRVidrKcyWKyqUtPQMA==,type:str]
+generic__ips_nas: ENC[AES256_GCM,data:amqhgdzS3I6BScaS,iv:Nbzcpl5qSSS7RRZj0GpVH0Qq9fFn8rapgRV6pUL/OYw=,tag:0jVxBLxlL2gbqs3LX1reUw==,type:str]
 #ENC[AES256_GCM,data:Wl05KAI3PlZ4zHIjPmY1oQ==,iv:0PbWA0vuNCxhea9Kzxq8+OmIMHs2DpyD05oLLlNL8SQ=,tag:cSOAahWnkzXayGb+lUj4dA==,type:comment]
 generic__docker_traefik_htpasswd_entry: ENC[AES256_GCM,data:kxxDLUwEcXdDpPSsWA8ks3hzOZ2Lg/RGxE4a9nsq9eJjqWvYJD+UBOt0R2I=,iv:QHuxMr/sbp9HDrZb7umV31vQRgLfkqp7upmaP6S3rE8=,tag:SKeO9ZpuRtEXSjwXWOIsBQ==,type:str]
 #ENC[AES256_GCM,data:JmeIn4VJQS9Sf3ZJwflz5ngAQpEjoXSlK8T8KeTFKb5SHUjLl6qLP/dotyA7GydqxGVo1KebJuNuWZkjYS6Rgt6HxsqNcu+30xfO+USsZcYjDLt7r2K43bT/SjFbA1ti9TTl+eWwSSlURk0UOfTI01/DFO50/xPYk6s+61X54rFKhE0EVr4Hj3dTuffJFr8yPnKCCzDElG1yZfGAQYhxZoc=,iv:22orSRrcjHrerwyf+DWJEZlZSQvDydn8pevLMqo67Ao=,tag:6425ES4BH2rQS+dmeRNbuQ==,type:comment]
@@ -145,8 +146,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-04T18:29:44Z"
-    mac: ENC[AES256_GCM,data:napvA8iUJDNierBbfExqg/WSafRK71p59w9/MjGcY6X+PZYM0lTIc/Q2UhkeitIZNz3wZwDQb07AZhylQregg6SOPaOQw4Mc7bwlHSNNDQgEoagTX88S+CZsrVcEaGzMXx7zTT4KNq/ueaVJ5afOYZx1HIVYuVZceJyw+a+JEvc=,iv:PZZK4GC7EgaDqlGHRg1CdZVKZT8/QnE5INWdRrPHpo0=,tag:xbLAJOFUOKHKLVfmFGinVw==,type:str]
+    lastmodified: "2025-06-07T19:38:30Z"
+    mac: ENC[AES256_GCM,data:yB+7rNeOzZ8pgb6kzP3JCfXAAJHUfby4drapQZG461GWge7GYdkx6C3bpJfjWTOnZHtrN+8QKODa8k4vbVcKD5aOGd4mgyGCAZegsusJfDJhEK6A6GlccLq2PY3HtHRKJ45/o7KeO3r4uCqf4QYgS4C73iuV0TzDQH/GRkdaqYQ=,iv:RJFEOkv55OMAqy0SbSZmI52eGtFgvL2AqQXrmOAMDXc=,tag:NWFEWSfku1yfCPwSHlNS3A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
