Reintroduce Outline for docs

--- a/docker/ansible/inventory/group_vars/apps/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/apps/secrets.sops.yml
@@ -6,6 +6,7 @@ generic__svlnas_smb_shares:
     - ENC[AES256_GCM,data:nE7pQx18egTM3Q==,iv:81h+hgNyZFwTR/c9lFuUW56lnvZa2dZVUWSahycwB3Q=,tag:Cy/zeGizmHT0kMHVugv3vA==,type:str]
     - ENC[AES256_GCM,data:Hg0VADqy,iv:eaX/+yjWOcScFaizFX4gTbvVkaSqv1rVwCd1EyGrgYc=,tag:VA3oRTRDhAiEM3qMIYBKxw==,type:str]
     - ENC[AES256_GCM,data:Fmd2/3k=,iv:IHnkoDdnh5bLyrm45nFjy1BEJLjgonqimIITB1GeZxo=,tag:3wMG8f2oqmWQA9vFnn8NHg==,type:str]
+    - ENC[AES256_GCM,data:c4sXYaw=,iv:+Jwi0amjc3wWXB9FVscm+T9+w157cIaKBwrUKddEzCU=,tag:lU55otOL8BBd1RGvj2FQSA==,type:str]
     - ENC[AES256_GCM,data:d3a3Mz5q,iv:EOhwHlB0sitmw0RxW4ATSHHsC7EYysAdH0DbJUqmbr0=,tag:ZViSm0Zb4eliAn3i7Tp8SQ==,type:str]
     - ENC[AES256_GCM,data:waPz75Q=,iv:yADGUCGYOUEQW6lhGHQ2j0qp9bVyYlIUwVbB9x8oYsw=,tag:alkgE57CZfzLMoenpjoOaQ==,type:str]
     - ENC[AES256_GCM,data:LQA=,iv:Xu92QbwD8uQkpn7EccA9EB8jaep/mpyPpnJF/hc8j/0=,tag:3yiGyA9ij+BHAMuxAT6SNQ==,type:str]
@@ -33,8 +34,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-06T06:20:49Z"
-    mac: ENC[AES256_GCM,data:mEKWdoxCfglocZ3FmXefUx4G3YJMgPqJ/rqquMrZOfofrlbmE2KZs6rrUK2mbsrcS4kovE/KBHJLAZ7q0r7devSdL6/IQG7fX5ufJP6BQF9vj+2/KtyCHomtgGOklNXSrGwTtH2jHXVHQ324vVbcW5MbvqKHi2mE9fa6/KS6SBA=,iv:dhHpDYi+noshGtbBY3DTT1A68UAm6FNkP4p2It1j3xA=,tag:q+Cguwku5hoj3xsIqDQZDQ==,type:str]
+    lastmodified: "2025-06-14T08:21:03Z"
+    mac: ENC[AES256_GCM,data:qXlk5xs88Zmx0a8+SxUvhr2KCR5IKtZtfsNghottOZn510HQxKQagtlwL4b7Wh7t+RMBCPv5dmrRwzHnhTIm82ngj+vwRq7Y97W/GZLfS7U86z/B+i2NKdPJ3fx87gF+hDPJUjC9pCd2djQNK8PTGOl+ur92xKL0m9z58PHIjSA=,iv:lK7j2SjUBjc0nxIhHUlIFKZEA09+A6pN1g2Pe8+2PiA=,tag:P/hdfGBnfxdVSwT0bQM6Aw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
