--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -39,6 +39,9 @@ apps__hoppscotch_db_password: ENC[AES256_GCM,data:i8ibWRmRUEyh9Bq2glB6m7sdTKomS7
 apps__hoppscotch_db_data_encryption_key: ENC[AES256_GCM,data:VTUh9gKG19SH4hHVaRrMveUYUJ5digXL3BPniJSQxlY=,iv:crm5MtiEpzsScjv1fWtYO4HB1rnY0FhcvJqfkObSwqQ=,tag:ytiYUR1aSOY6oZ5MTJj6wQ==,type:str]
 apps__hoppscotch_github_client_id: ENC[AES256_GCM,data:CfvrlQLtc5ZX4dl83E8YnpP7wHM=,iv:1kFodm3vrUtYm36iQzLZVPYOyzT0CK5OxTkdkjxPzME=,tag:jZGkwqqgzdbFHVpS24nMOQ==,type:str]
 apps__hoppscotch_github_client_secret: ENC[AES256_GCM,data:AhybOjzXrjoCtSXG7Uafnrr6cmBg5PiQHm656/VNooaaBID1qIiG1w==,iv:07+oyyEMyfT8yv13XjSvHBHzELdQcqGq3VOI9zCF4lM=,tag:6QB6rEIzZMuQrYm3QLZB4Q==,type:str]
+#ENC[AES256_GCM,data:GRk//cC96B8=,iv:uATvWJfanxjVobWobrB2wqA3I7MilM/wjyEtIIal2so=,tag:JP+nzbQqBvSUnynZLaC+Pw==,type:comment]
+apps__immich_redis_password: ENC[AES256_GCM,data:or7A+bak4W8aM6tzaBfqveLcEGmxkIaUj+etwlnDybrvKGq4sFEtG8cfrdimMhoB,iv:zI42UgtAA0+M3J6qkhXFSII08vca27t2eXARt86TCoI=,tag:iHLtfBcT5aDtTSIE4BWzlg==,type:str]
+apps__immich_db_password: ENC[AES256_GCM,data:GrJec5BGW5Bxk/jKmlu1qE737Lg05PCFbF+HM/XsfOBFzVQdctObQa4VFWzVEF6d,iv:RpKHPmo/x/FnP4lr2ubUFsrLy3Hsjxtm6mN4o9zxS5Q=,tag:wPG1FrAbb8aKJlHhXt32PQ==,type:str]
 #ENC[AES256_GCM,data:6SYMncMo1qoM0Q==,iv:duT8JV4AlE05wAzb4Kp28A7m1NrhliQixf9Y6BpcbKI=,tag:/Z3N+lhpeo1zaBYHqt8mtA==,type:comment]
 apps__influxdb_username: ENC[AES256_GCM,data:2uX03O8brViL,iv:32XDEOjPGLMsjbSNdVIpXw0e3uINyre6of3ZwiVfCxc=,tag:ZRHwCNazL3VkquMGzEyn5w==,type:str]
 apps__influxdb_organization: ENC[AES256_GCM,data:I0OfFdrtTZ1XdEdQtdw=,iv:4wSC4FR9ZKoD7zPwsIZONdbDa1BXDrQGnSNwBPVsqUA=,tag:QKxEtT5hCy/YdjI2Wahb8g==,type:str]
@@ -146,8 +149,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-07T19:38:30Z"
-    mac: ENC[AES256_GCM,data:yB+7rNeOzZ8pgb6kzP3JCfXAAJHUfby4drapQZG461GWge7GYdkx6C3bpJfjWTOnZHtrN+8QKODa8k4vbVcKD5aOGd4mgyGCAZegsusJfDJhEK6A6GlccLq2PY3HtHRKJ45/o7KeO3r4uCqf4QYgS4C73iuV0TzDQH/GRkdaqYQ=,iv:RJFEOkv55OMAqy0SbSZmI52eGtFgvL2AqQXrmOAMDXc=,tag:NWFEWSfku1yfCPwSHlNS3A==,type:str]
+    lastmodified: "2025-06-14T12:02:15Z"
+    mac: ENC[AES256_GCM,data:gPAr0O1xub09ACHbg1yEh6t+2CZWq48WszSe8V99GTfScRbEZQVrDqaXLJVUWk5HBwVwjH5u2A1omNaY8yHIgFMDSgecj1wJ67yCFh50mfmJpBrCQbvosmMtW6OFCRm4/ZVkuMinI3EIrt6Pm5ku15m5kRPo2HkhQ0gvMxRDCvc=,iv:uiD4NcyeKuZmHVanLXgeQxOXcqvmtn2GH93iprCVHGE=,tag:aWDhTq5Vp1O/GBgz/T4tFg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
