--- a/.archive/docker/ansible/templates/compose-modules/beaverhabits.yml
+++ b/.archive/docker/ansible/templates/compose-modules/beaverhabits.yml
@@ -1,6 +1,13 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: None
+## Last used version: 0.4@sha256:390996eb549510e7979bbb9956119b5391184e80be7e9398530b3dd5128ab19b
+#
+
 services:
   beaverhabits:
-    image: daya0576/beaverhabits:0.4@sha256:390996eb549510e7979bbb9956119b5391184e80be7e9398530b3dd5128ab19b
+    image: daya0576/beaverhabits
     user: "${PUID}:${PGID}"
     container_name: beaverhabits
     depends_on:
@@ -37,7 +44,7 @@ services:
 
   beaverhabits-db-backup:
     container_name: beaverhabits-db-backup
-    image: tiredofit/db-backup:4.1.19@sha256:26eca0cda2b5decb4e296917f9aaebda2e6f89a237663a65e1cb3eccfe432cd0
+    image: tiredofit/db-backup # :4.1.19@sha256:26eca0cda2b5decb4e296917f9aaebda2e6f89a237663a65e1cb3eccfe432cd0
     volumes:
       - beaverhabits_data:/data:ro
     mem_limit: 512m
