Fix Azure OpenAI endpoint

--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -63,6 +63,19 @@ apps__nextcloud_admin_user: ENC[AES256_GCM,data:FoyKtc7C8ysC,iv:3uja0WiAvVQesaD5
 apps__nextcloud_admin_password: ENC[AES256_GCM,data:gtx4fNMHJHCsIgswXj9rV9/jKk6xVshYZi2XxA==,iv:Foyb8xkdfD8VBys7XZ2IUWAW2rakOsZOO548utGjWd8=,tag:5MfVJGDSL8S+3IGW67xxKg==,type:str]
 apps__nextcloud_trusted_domains: ENC[AES256_GCM,data:knWLEQ3Ewz02Y/+71Fl4p+Km0AzGkXiFecJcQ1sq5SaLjK/M65qJgIduAxxQm7Wz,iv:U4/niMocS0GL6LLyp7AjGlZ7WA5qm/6HpS62CAnaXgE=,tag:F3QGOjaiVcAZ1Ulj2Zz9uw==,type:str]
 apps__nextcloud_redis_password: ENC[AES256_GCM,data:cXwiwil6VOsXoIYK8I37qfhh/0snCDpiu7Y=,iv:Xvwb8ST6SiqeXRAVoXNtrIoYTc0uNYCsjizsPCUq5tk=,tag:nhWKABxskOCkUdBKQRFVuw==,type:str]
+#ENC[AES256_GCM,data:VCChCAqyv7xt2vOX,iv:BJeojFIvHULXfWLV6RFLM3Bi9O/BprNYs1WRHFf0tBA=,tag:znJFDfR3c+YSFBjLqAiIVQ==,type:comment]
+apps__open_webui_azure_api_urls: ENC[AES256_GCM,data:tG8pAnTXDLqkfdICZnONJDlybxl7aqWYhkyLnk/Csqp6/yGWSElHcndXfKSmfot/Ttrg8FOHE4id/RrZSCKePBY=,iv:G60ISwoFkNekndbw4CQWE5Hs+uJgQV+zX6v3uD0hBYs=,tag:7Z5tNtWlyC7PvfuXuEIQgA==,type:str]
+apps__open_webui_azure_api_keys: ENC[AES256_GCM,data:iggfEEyAUM74Y1dS8W+RruW9yEkI8V1OESHSkFCnHdrzybe+VfDkZgi8RJHjKeJWQo7tzkMpUqt2DiS2XKU9xX4d5mXiMx1afE4kaeyg/YBwjsjqUimoegcJtguNa1eGJDQgKZaPX6ixWR3SYIgpJHrM+jOwRE5TfMgG+ZNzRQU2HSFtB333tACHF3KOWjyW/C8qN0ZkIgwCYKD3iJBayKEG4NpcYZ65kA==,iv:m1DMB8kS9ySsxJlSf0V8ygBaDh3F0DiHMavXGG8kH8E=,tag:bdlsXRSrnAwdzJgPCQJ4VQ==,type:str]
+#ENC[AES256_GCM,data:GjZSVpIWxb0MDTzzghGE9HjjhBAq6fYXjPZXMUrIB9r4jVK+tI3Oac0GXBrah0vLkvjSPL57jA1MZh4V4IWc7Yi/f9OKfYmiaG4MyfGaRcy/i8b9wctVMrV//tv4MBtS3YW+zH0YwvcA,iv:SZSkuBNWqfdBLwhrpQvOjIQDADpaLvJaf5TrSaQIC8I=,tag:K0T9q4GOLiJA82AbGaRwWQ==,type:comment]
+apps__open_webui_azure_api_prefix_ids: ENC[AES256_GCM,data:huqHtAPU5g==,iv:7isnHsIeiGTgvO3Ra1YbphB2Fj5YOKihA9ijaEQbA+Y=,tag:4ZHIfrS+9E0Um2oc83BRXg==,type:str]
+#ENC[AES256_GCM,data:GvBCihmUscr1cQ9kEnu+bbsPL4RVhgTw/WbjsfPTNw8PFUE8+80xM04jkuMd0/3QoGaeyrCawPfs/57GXXpnKHK/rQKCjfeCWEBigd2zQ0Oc9RaM3P3E8NFgNoGDKrRqaCDmCxtdL8kF,iv:MP4BFNbQya6F3Hs+ho4olYWWuk3l/PiaTKd3/bmB7ns=,tag:06SWW/UGZx1NPHtV2yCpZA==,type:comment]
+apps__open_webui_azure_api_versions: ENC[AES256_GCM,data:+U5ZfOzIfgxUKqnODchfr7y1,iv:24akVYLlHJkXpWucwIxbKni88B7kP+2l7Snq2JUyb4I=,tag:3SK0qqxkGU/RYofCFMzGqg==,type:str]
+#ENC[AES256_GCM,data:J+np5UMy+AkmeUjXezuDccisqbpc5/OtwgsAxDHLuyRYuEx2ukKEJ5xa4FfKIrG8hduCPuty1QuCxqYXIVTbKSC6YHokq6mmH0Zbb3UytMMe1VPsb1xqZ8qdJ8fHUhF9WW1ueVrv3yFr,iv:ankR9qUBNbJUEsFMAGdkKgw6YQS7bAdCi6fq0YuDY1U=,tag:jEOUcBC298KIykpbyZ8ytw==,type:comment]
+apps__open_webui_azure_api_tags: ENC[AES256_GCM,data:PilgK11J/4KEZrzW,iv:452OiW1h/O5CXDJybSQqEoku077xBquJfhzfF0BnjQs=,tag:V/5NkBNXbteRcBTW9CRfOA==,type:str]
+#ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
+apps__open_webui_azure_api_model_ids: ENC[AES256_GCM,data:KbuZHMEv,iv:w1JHsNqzvX1URpjJ4dvug6p5eeZJVB3QrL2kyi+faCk=,tag:AeZPkUPJbahyvv3xr+Q7xg==,type:str]
+apps__open_webui_ollama_base_url: ENC[AES256_GCM,data:98AFvWbkxsf8QtnjMzmruZVRqIiqnni4KHHNnVXNwzPrhr/24UI=,iv:CzWQVJvNG0WmzBEV2zL0ZtC3mTFlJWTvdr4sjCFQ3cU=,tag:HZWutAuN3seUJ2RFsVXrgw==,type:str]
+apps__open_webui_secret_key: ENC[AES256_GCM,data:/v5tTnRoouqWZ9VGnqWtgqfKFgv9FKnr97JuX/epOPXMAHtJkUKBrnM3f16ZNA4zOXH5dbzMJgAtdp44oSx7hQ==,iv:2XwREfx441kDdqoORb0q5dlpnCui/dr9cnQWntQz6Fo=,tag:sNGDXh+irHLIiu35l5mpZA==,type:str]
 #ENC[AES256_GCM,data:QuVXnRrkY/5N,iv:ZJ+qs21pVd4gwlsGAyEukd87wOw7h4Yd30Y65S1gZ40=,tag:MSZRvI4xKSeO6f5ovIBtmA==,type:comment]
 apps__outline_secret_key: ENC[AES256_GCM,data:7EQEwLByo/XFMA8M3cTElYVMb5/IfYxgXQjIh7UihQ//RI5u+N8OcCmstdT9op4vKAfKEcc7C3ulFMwjLy8kSw==,iv:XVNub65HxRiAkHiGMm+V9G0iQv+sf1IC7batp5e6GAk=,tag:p+XmhP3O4XgX53DDYsGqQA==,type:str]
 apps__outline_utils_secret: ENC[AES256_GCM,data:cus6rTNR0DACBVBfu5LvILatIcihZk3Kv1wMiX0IGJT99ZPc42Y5z0ZlNFGlopcBssGhQ66xeyln8peNq0l5Gg==,iv:T6eQBZTRzx8XBnL0+CPgvJ79ppF+niu7VEgeiVC6pWI=,tag:76uJqjzh5z451T7hxMiFhA==,type:str]
@@ -149,8 +162,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-14T12:02:15Z"
-    mac: ENC[AES256_GCM,data:gPAr0O1xub09ACHbg1yEh6t+2CZWq48WszSe8V99GTfScRbEZQVrDqaXLJVUWk5HBwVwjH5u2A1omNaY8yHIgFMDSgecj1wJ67yCFh50mfmJpBrCQbvosmMtW6OFCRm4/ZVkuMinI3EIrt6Pm5ku15m5kRPo2HkhQ0gvMxRDCvc=,iv:uiD4NcyeKuZmHVanLXgeQxOXcqvmtn2GH93iprCVHGE=,tag:aWDhTq5Vp1O/GBgz/T4tFg==,type:str]
+    lastmodified: "2025-08-09T15:03:59Z"
+    mac: ENC[AES256_GCM,data:QMBPkedFS59Sx+HYs6z/qsJB4VnaamBWRx8Z5P4nWfriVSGraJJtEiWszTYTLK6HVZx+ip0mb4rQ3XFmtH9IV19YS6U+L3mOWMNQMUxjGILObjhKkrQ0jh27N3irdABXGb1tJUBpC1zs07IGOgQiXAJ4PLmlxmeJzAySUKWuZlg=,iv:NCLL8vKyQHThayM2EF4ZdqqWuU6LDeTZ1yunJf4fXJM=,tag:BQHHbZja+XSXEllNu+QrXg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
