--- a/docker/ansible/templates/compose-modules/open-webui.yml
+++ b/docker/ansible/templates/compose-modules/open-webui.yml
@@ -8,6 +8,8 @@ services:
     security_opt:
       - no-new-privileges=true
     mem_limit: 1024m
+    volumes:
+      - open_webui_data:/app/backend/data
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -16,10 +18,17 @@ services:
       - WEBUI_AUTH_TRUSTED_EMAIL_HEADER=x-forwarded-user
       # - WEBUI_AUTH_TRUSTED_NAME_HEADER= # TODO: [open-webui] Add Display Name from header
       - WEBUI_URL=https://chat.$DOMAINNAME
-      - ENABLE_LOGIN_FORM=false
+      - WEBUI_SECRET_KEY=${OPEN_WEBUI_SECRET_KEY}
+      - ENABLE_LOGIN_FORM=true # Required for OAuth to work. Otherwise you'll get a strange error
       - ENABLE_OPENAI_API=true
-      - OPENAI_API_KEY=${LOBE_CHAT_AZURE_API_KEY}
-      - OPENAI_API_BASE_URL=${LOBE_CHAT_AZURE_ENDPOINT}
+      - OPENAI_API_KEY=${OPEN_WEBUI_AZURE_API_KEYS}
+      - OPENAI_API_BASE_URL=${OPEN_WEBUI_AZURE_API_URLS}
+      - OLLAMA_BASE_URL=${OPEN_WEBUI_OLLAMA_BASE_URL}
+      # TODO: [open-webui] Fix manual task: To be added when implemented by Open WebUI
+      # ${OPEN_WEBUI_AZURE_API_PREFIX_IDS}
+      # ${OPEN_WEBUI_AZURE_API_VERSIONS}
+      # ${OPEN_WEBUI_AZURE_API_TAGS}
+      # ${OPEN_WEBUI_AZURE_API_MODEL_IDS}
     networks:
       - open-webui-frontend
     labels:
@@ -43,3 +52,6 @@ services:
 networks:
   open-webui-frontend:
     name: open-webui-frontend
+
+volumes:
+  open_webui_data:
