--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -64,16 +64,16 @@ apps__nextcloud_admin_password: ENC[AES256_GCM,data:gtx4fNMHJHCsIgswXj9rV9/jKk6x
 apps__nextcloud_trusted_domains: ENC[AES256_GCM,data:knWLEQ3Ewz02Y/+71Fl4p+Km0AzGkXiFecJcQ1sq5SaLjK/M65qJgIduAxxQm7Wz,iv:U4/niMocS0GL6LLyp7AjGlZ7WA5qm/6HpS62CAnaXgE=,tag:F3QGOjaiVcAZ1Ulj2Zz9uw==,type:str]
 apps__nextcloud_redis_password: ENC[AES256_GCM,data:cXwiwil6VOsXoIYK8I37qfhh/0snCDpiu7Y=,iv:Xvwb8ST6SiqeXRAVoXNtrIoYTc0uNYCsjizsPCUq5tk=,tag:nhWKABxskOCkUdBKQRFVuw==,type:str]
 #ENC[AES256_GCM,data:VCChCAqyv7xt2vOX,iv:BJeojFIvHULXfWLV6RFLM3Bi9O/BprNYs1WRHFf0tBA=,tag:znJFDfR3c+YSFBjLqAiIVQ==,type:comment]
-apps__open_webui_azure_api_urls: ENC[AES256_GCM,data:tG8pAnTXDLqkfdICZnONJDlybxl7aqWYhkyLnk/Csqp6/yGWSElHcndXfKSmfot/Ttrg8FOHE4id/RrZSCKePBY=,iv:G60ISwoFkNekndbw4CQWE5Hs+uJgQV+zX6v3uD0hBYs=,tag:7Z5tNtWlyC7PvfuXuEIQgA==,type:str]
-apps__open_webui_azure_api_keys: ENC[AES256_GCM,data:iggfEEyAUM74Y1dS8W+RruW9yEkI8V1OESHSkFCnHdrzybe+VfDkZgi8RJHjKeJWQo7tzkMpUqt2DiS2XKU9xX4d5mXiMx1afE4kaeyg/YBwjsjqUimoegcJtguNa1eGJDQgKZaPX6ixWR3SYIgpJHrM+jOwRE5TfMgG+ZNzRQU2HSFtB333tACHF3KOWjyW/C8qN0ZkIgwCYKD3iJBayKEG4NpcYZ65kA==,iv:m1DMB8kS9ySsxJlSf0V8ygBaDh3F0DiHMavXGG8kH8E=,tag:bdlsXRSrnAwdzJgPCQJ4VQ==,type:str]
-#ENC[AES256_GCM,data:GjZSVpIWxb0MDTzzghGE9HjjhBAq6fYXjPZXMUrIB9r4jVK+tI3Oac0GXBrah0vLkvjSPL57jA1MZh4V4IWc7Yi/f9OKfYmiaG4MyfGaRcy/i8b9wctVMrV//tv4MBtS3YW+zH0YwvcA,iv:SZSkuBNWqfdBLwhrpQvOjIQDADpaLvJaf5TrSaQIC8I=,tag:K0T9q4GOLiJA82AbGaRwWQ==,type:comment]
-apps__open_webui_azure_api_prefix_ids: ENC[AES256_GCM,data:huqHtAPU5g==,iv:7isnHsIeiGTgvO3Ra1YbphB2Fj5YOKihA9ijaEQbA+Y=,tag:4ZHIfrS+9E0Um2oc83BRXg==,type:str]
-#ENC[AES256_GCM,data:GvBCihmUscr1cQ9kEnu+bbsPL4RVhgTw/WbjsfPTNw8PFUE8+80xM04jkuMd0/3QoGaeyrCawPfs/57GXXpnKHK/rQKCjfeCWEBigd2zQ0Oc9RaM3P3E8NFgNoGDKrRqaCDmCxtdL8kF,iv:MP4BFNbQya6F3Hs+ho4olYWWuk3l/PiaTKd3/bmB7ns=,tag:06SWW/UGZx1NPHtV2yCpZA==,type:comment]
-apps__open_webui_azure_api_versions: ENC[AES256_GCM,data:+U5ZfOzIfgxUKqnODchfr7y1,iv:24akVYLlHJkXpWucwIxbKni88B7kP+2l7Snq2JUyb4I=,tag:3SK0qqxkGU/RYofCFMzGqg==,type:str]
-#ENC[AES256_GCM,data:J+np5UMy+AkmeUjXezuDccisqbpc5/OtwgsAxDHLuyRYuEx2ukKEJ5xa4FfKIrG8hduCPuty1QuCxqYXIVTbKSC6YHokq6mmH0Zbb3UytMMe1VPsb1xqZ8qdJ8fHUhF9WW1ueVrv3yFr,iv:ankR9qUBNbJUEsFMAGdkKgw6YQS7bAdCi6fq0YuDY1U=,tag:jEOUcBC298KIykpbyZ8ytw==,type:comment]
-apps__open_webui_azure_api_tags: ENC[AES256_GCM,data:PilgK11J/4KEZrzW,iv:452OiW1h/O5CXDJybSQqEoku077xBquJfhzfF0BnjQs=,tag:V/5NkBNXbteRcBTW9CRfOA==,type:str]
+apps__open_webui_azure_api_urls: ENC[AES256_GCM,data:59y10qO2OaNmCLXvCzA/42gYya0bysZOzJ6q99YaACyyqLebpVyQFTNIDBJtzK8WNGW3qUP9akPfeYX8t1TxtoI=,iv:ZeDyxLueSeUPygPEVZie1xNaiLNBbWP2oU45U6JIky0=,tag:cuJxAaL60DlpYaTKUwN+TQ==,type:str]
+apps__open_webui_azure_api_keys: ENC[AES256_GCM,data:51dAy4mxhT/2x0gHugHIDgUpWf7f1jLWkSJ9JbqN5d9Z10efiV8VhaPmFZb4QJb04eAavss1CyPtXKDM2PxxOPsG3CGOBGH+jLxnesw+df1HjdO/6kDB5tvO7xnGxnMhGzoG5bZfBm1hrF/hcc2mskqJkvWIbtkt7Ggv8HdnoXLFmDUFHDBJaafxObyllaLZgmJpcDzR/i6npNtVrIbpB2urA41SI33RdA==,iv:XrlRxRwfP+tfMo/7ghMD5k8BrEHoJH5CENX8lE/Dgs8=,tag:KrE0Zpj9VD5kzW3tGhkxhw==,type:str]
 #ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
-apps__open_webui_azure_api_model_ids: ENC[AES256_GCM,data:KbuZHMEv,iv:w1JHsNqzvX1URpjJ4dvug6p5eeZJVB3QrL2kyi+faCk=,tag:AeZPkUPJbahyvv3xr+Q7xg==,type:str]
+apps__open_webui_azure_api_prefix_ids: ENC[AES256_GCM,data:f+SXWuzptA==,iv:iwZUBYB0hO4dH8GeW5oMC4E/7lvtFn+G+8I1jgX0l5s=,tag:LjUN5Kj+ae8YzSeQbIyTww==,type:str]
+#ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
+apps__open_webui_azure_api_versions: ENC[AES256_GCM,data:Sc1nq7+zlmPLPbqMDK1+HDMfKoNlOLtilKlVdEfZLyEiaWmA8w==,iv:SVmklgMulBOlxD7uT+MSyLW5mLOQmjhkjsx0/9lqhBc=,tag:I4GJSq0QCmMm/LuMC6H22Q==,type:str]
+#ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
+apps__open_webui_azure_api_tags: ENC[AES256_GCM,data:8kOOfe7XlQhut7sUtRgMwQmScST/2y27yw==,iv:HKwmDgJWVQJEmiGNzm9i7RAkHG360KoEOEEE3B4cIMY=,tag:jTeCBGLU3wO/HKoHOM8bPg==,type:str]
+#ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
+apps__open_webui_azure_api_model_ids: ENC[AES256_GCM,data:lscdluA9/gsbJpeSCg==,iv:Zxr/xH0hjRr7NAFFnsUDChg3TQic58zXqovTtk6IDJw=,tag:8anSr2Eaqw8Ruif/uZ9cBg==,type:str]
 apps__open_webui_ollama_base_url: ENC[AES256_GCM,data:98AFvWbkxsf8QtnjMzmruZVRqIiqnni4KHHNnVXNwzPrhr/24UI=,iv:CzWQVJvNG0WmzBEV2zL0ZtC3mTFlJWTvdr4sjCFQ3cU=,tag:HZWutAuN3seUJ2RFsVXrgw==,type:str]
 apps__open_webui_secret_key: ENC[AES256_GCM,data:/v5tTnRoouqWZ9VGnqWtgqfKFgv9FKnr97JuX/epOPXMAHtJkUKBrnM3f16ZNA4zOXH5dbzMJgAtdp44oSx7hQ==,iv:2XwREfx441kDdqoORb0q5dlpnCui/dr9cnQWntQz6Fo=,tag:sNGDXh+irHLIiu35l5mpZA==,type:str]
 #ENC[AES256_GCM,data:QuVXnRrkY/5N,iv:ZJ+qs21pVd4gwlsGAyEukd87wOw7h4Yd30Y65S1gZ40=,tag:MSZRvI4xKSeO6f5ovIBtmA==,type:comment]
@@ -162,8 +162,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-08-09T15:03:59Z"
-    mac: ENC[AES256_GCM,data:QMBPkedFS59Sx+HYs6z/qsJB4VnaamBWRx8Z5P4nWfriVSGraJJtEiWszTYTLK6HVZx+ip0mb4rQ3XFmtH9IV19YS6U+L3mOWMNQMUxjGILObjhKkrQ0jh27N3irdABXGb1tJUBpC1zs07IGOgQiXAJ4PLmlxmeJzAySUKWuZlg=,iv:NCLL8vKyQHThayM2EF4ZdqqWuU6LDeTZ1yunJf4fXJM=,tag:BQHHbZja+XSXEllNu+QrXg==,type:str]
+    lastmodified: "2025-08-09T15:14:04Z"
+    mac: ENC[AES256_GCM,data:p0WIevuOilUEy1iHVVGFisegU7s1ddYsNa9gvsU97CO7NkI3aa5oF0sKcJGoaPSSOwL6+/IDCPCzluPlR//f2cGDvrLOSd27x+it9W2UdLIZrqp+KYXV9tme0LZj+rZnag5VURxMOuCp5lS/SqiRtX7N1ucq8f5svvIbnZh2SHs=,iv:okyre1RCrjnhsP4WW49hnGqesMcXII2+lhQw7yQwZmU=,tag:O2k1yjPyMseNDhxZEMA3yA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
