--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -64,8 +64,10 @@ apps__nextcloud_admin_password: ENC[AES256_GCM,data:gtx4fNMHJHCsIgswXj9rV9/jKk6x
 apps__nextcloud_trusted_domains: ENC[AES256_GCM,data:knWLEQ3Ewz02Y/+71Fl4p+Km0AzGkXiFecJcQ1sq5SaLjK/M65qJgIduAxxQm7Wz,iv:U4/niMocS0GL6LLyp7AjGlZ7WA5qm/6HpS62CAnaXgE=,tag:F3QGOjaiVcAZ1Ulj2Zz9uw==,type:str]
 apps__nextcloud_redis_password: ENC[AES256_GCM,data:cXwiwil6VOsXoIYK8I37qfhh/0snCDpiu7Y=,iv:Xvwb8ST6SiqeXRAVoXNtrIoYTc0uNYCsjizsPCUq5tk=,tag:nhWKABxskOCkUdBKQRFVuw==,type:str]
 #ENC[AES256_GCM,data:VCChCAqyv7xt2vOX,iv:BJeojFIvHULXfWLV6RFLM3Bi9O/BprNYs1WRHFf0tBA=,tag:znJFDfR3c+YSFBjLqAiIVQ==,type:comment]
-apps__open_webui_azure_api_urls: ENC[AES256_GCM,data:59y10qO2OaNmCLXvCzA/42gYya0bysZOzJ6q99YaACyyqLebpVyQFTNIDBJtzK8WNGW3qUP9akPfeYX8t1TxtoI=,iv:ZeDyxLueSeUPygPEVZie1xNaiLNBbWP2oU45U6JIky0=,tag:cuJxAaL60DlpYaTKUwN+TQ==,type:str]
-apps__open_webui_azure_api_keys: ENC[AES256_GCM,data:51dAy4mxhT/2x0gHugHIDgUpWf7f1jLWkSJ9JbqN5d9Z10efiV8VhaPmFZb4QJb04eAavss1CyPtXKDM2PxxOPsG3CGOBGH+jLxnesw+df1HjdO/6kDB5tvO7xnGxnMhGzoG5bZfBm1hrF/hcc2mskqJkvWIbtkt7Ggv8HdnoXLFmDUFHDBJaafxObyllaLZgmJpcDzR/i6npNtVrIbpB2urA41SI33RdA==,iv:XrlRxRwfP+tfMo/7ghMD5k8BrEHoJH5CENX8lE/Dgs8=,tag:KrE0Zpj9VD5kzW3tGhkxhw==,type:str]
+#ENC[AES256_GCM,data:YVAZjg/q6TkzK8HRYrsLPd/DMJZeIj1hHtVk6EHfiue+bXiWoOI11S7Jv1dYIfVL0+3ePvP3KIsL9i/7AGJvbqPg7LBL4GVxowHIiP+MApcxG0u743QeczNfmqqzESGtugI=,iv:Y4YcKK6+VYutu5UiMLkJTKiZmBKJ0Px+4nD+tOOxEdw=,tag:E0vM9F0KdZYwEZ00pRODxg==,type:comment]
+apps__open_webui_azure_api_urls: ENC[AES256_GCM,data:koC0qyAnNqvkMoVGUWAgISDy8xF+QK/IrgaeIDQYb9A=,iv:Rfld84Gj7nPpNrI9h5YXdQFz/H1rwShH+UjdXZ/Zvlg=,tag:/aI3uzfxz352IZuBPeR3ug==,type:str]
+#ENC[AES256_GCM,data:kNYC26HqnZDKSF4sOrzK+4F/E3avcxgC81kHI0vt5lbz0/tsj6MIy0SpKXRfLAeTNysHu3ykD6tfIX74T6+JqlVWwzP/iq8DgZ0I18GqWbgCfZcd6CkqT3Sxl+qr7YRFOlSQ0N1ZoXN15yJcS1ucFRf5997BlwTcC3dwydY6wV9PXodwKPtsjcrC8/Ea8Ly9JOSCUFG0/Cp0SMWUsuwMwTrEeBrcK/B8RDRm0We23gujXw4Uhys6Cw/t6Z5YsRH6sTKCSE8+GwhTIw==,iv:sMHg/X7lcJGCx93EUSqN8226S8xmRIKLu4hu5ETPMEo=,tag:AY/fBGLEJlpz/5oSNHi9Vg==,type:comment]
+apps__open_webui_azure_api_keys: ENC[AES256_GCM,data:VQ50z5lhFS+BUx/jQfbkEfz2bac1jciiHMblzWDdKpGi4mN//6hWzqWJNgTz56V3wIQmGK0c/YsHmnUuxhZEHwg1Wmx0VLTe6wQrhZCDoJVqsQja,iv:QfAei6omAnBpEzNF78GpShPJYOn5WDxFWB/vl8BC/ys=,tag:VLUrY3pEVnnX/pWlHNXRdg==,type:str]
 #ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
 apps__open_webui_azure_api_prefix_ids: ENC[AES256_GCM,data:f+SXWuzptA==,iv:iwZUBYB0hO4dH8GeW5oMC4E/7lvtFn+G+8I1jgX0l5s=,tag:LjUN5Kj+ae8YzSeQbIyTww==,type:str]
 #ENC[AES256_GCM,data:9wBY1jpBRXVCOo/O+4clpbcssNrYJbXAKv2EljBipneHHSP5ffgRmCHK9Sqkhz9JIjpiwg/OwRjOjGvu0jgPifFfPgUsJX5njzOBAPBrHLGemWqzzoXAiv/qX46s2QwD+BYKqctcMT3v,iv:A3zRXyF8uDhtrpoHl4ZgsPW/hkvj6UwBclBWkEbb+Zw=,tag:8bQwmOA6ayZbjerMEfDT7g==,type:comment]
@@ -162,8 +164,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-08-09T15:14:04Z"
-    mac: ENC[AES256_GCM,data:p0WIevuOilUEy1iHVVGFisegU7s1ddYsNa9gvsU97CO7NkI3aa5oF0sKcJGoaPSSOwL6+/IDCPCzluPlR//f2cGDvrLOSd27x+it9W2UdLIZrqp+KYXV9tme0LZj+rZnag5VURxMOuCp5lS/SqiRtX7N1ucq8f5svvIbnZh2SHs=,iv:okyre1RCrjnhsP4WW49hnGqesMcXII2+lhQw7yQwZmU=,tag:O2k1yjPyMseNDhxZEMA3yA==,type:str]
+    lastmodified: "2025-08-10T07:11:29Z"
+    mac: ENC[AES256_GCM,data:onVkbO+GB3SmFnoOnAfwpmPu0c2z/VwdmEda1bMCEkDAZUnVsJWWA7zszRkZDMJSp7kV6JfMEps4+TgkAXNWHAtGg/iu4COKS7iem3t8qp+StTFq98BcBgobHsW2rl0smQONSiHNT8e04e/esXBvWyq7BUnnd/JWKOCQ7aBVWW4=,iv:/1LU5sC2XCSTjKA67H51bKcvOtoOP5S/Du2yVnXOe24=,tag:hi2yFf8yg6d2FrM3LNXxyQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
