--- a/docker/ansible/templates/compose-modules/open-webui.yml
+++ b/docker/ansible/templates/compose-modules/open-webui.yml
@@ -22,9 +22,14 @@ services:
       - ENABLE_LOGIN_FORM=true # Required for OAuth to work. Otherwise you'll get a strange error
       - ENABLE_OPENAI_API=true
       - ENABLE_EVALUATION_ARENA_MODELS=false
-      - OPENAI_API_KEYS=${OPEN_WEBUI_AZURE_API_KEYS}
-      - OPENAI_API_BASE_URLS=${OPEN_WEBUI_AZURE_API_URLS}
+
+      # TODO: [open-webui] Fix adding OpenAI and Ollama API keys. Somehow getting error 500
+      # NOTE: Specifying multiple keys & base URLs doesn't seem to work yet and results in a 500 error
+      # Keeping the variable name as KEYS and URLS for future compatibility
+      - OPENAI_API_KEY=${OPEN_WEBUI_AZURE_API_KEYS}
+      - OPENAI_API_BASE_URL=${OPEN_WEBUI_AZURE_API_URLS}
       - OLLAMA_BASE_URL=${OPEN_WEBUI_OLLAMA_BASE_URL}
+
       # TODO: [open-webui] Fix manual task: To be added when implemented by Open WebUI
       # ${OPEN_WEBUI_AZURE_API_PREFIX_IDS}
       # ${OPEN_WEBUI_AZURE_API_VERSIONS}
