--- a/docker/ansible/templates/compose-modules/open-webui.yml
+++ b/docker/ansible/templates/compose-modules/open-webui.yml
@@ -16,7 +16,7 @@ services:
       - TZ=${TZ}
       - ENABLE_OAUTH_SIGNUP=true
       - WEBUI_AUTH_TRUSTED_EMAIL_HEADER=x-forwarded-user
-      # - WEBUI_AUTH_TRUSTED_NAME_HEADER= # TODO: [open-webui] Add Display Name from header
+      - WEBUI_AUTH_TRUSTED_NAME_HEADER=x-forwarded-displayname
       - WEBUI_URL=https://chat.$DOMAINNAME
       - WEBUI_SECRET_KEY=${OPEN_WEBUI_SECRET_KEY}
       - ENABLE_LOGIN_FORM=true # Required for OAuth to work. Otherwise you'll get a strange error
