--- a/.github/workflows/todo-to-issue.yml
+++ b/.github/workflows/todo-to-issue.yml
@@ -15,7 +15,8 @@ jobs:
     name: "Run Todo to Issue"
     runs-on: "ubuntu-24.04"
     steps:
-      - uses: "actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0"
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: "TODO to Issue"
         uses: "alstr/todo-to-issue-action@v5"
         with:
