Phase out outline as I migrated to Apple Notes

--- a/docker/ansible/templates/data/common/gatus/config.yaml
+++ b/docker/ansible/templates/data/common/gatus/config.yaml
@@ -141,9 +141,9 @@ endpoints:
     <<: *defaults
     url: "https://chat.${DOMAINNAME}"
 
-  - name: Outline
-    <<: *defaults
-    url: "https://docs.${DOMAINNAME}"
+  # - name: Outline
+  #   <<: *defaults
+  #   url: "https://docs.${DOMAINNAME}"
 
   # - name: Paperless - HTTP
   #   <<: *defaults
