--- a/.github/workflows/validate-image.yml
+++ b/.github/workflows/validate-image.yml
@@ -1,9 +1,10 @@
 name: Validate Docker image
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-    paths: ["docker/**"]
+  workflow_dispatch:
+  # pull_request:
+  #   types: [opened, synchronize, reopened]
+  #   paths: ["docker/**"]
 
 permissions:
   contents: read
