--- a/docker/ansible/tasks/configure-dns-server.yaml
+++ b/docker/ansible/tasks/configure-dns-server.yaml
@@ -30,6 +30,21 @@
         value: 149.112.112.112
         no_extra_spaces: yes
 
+    - name: Disable systemd-resolved stub listener
+      ini_file:
+        path: /etc/systemd/resolved.conf
+        section: Resolve
+        option: DNSStubListener
+        value: "no"
+        no_extra_spaces: yes
+
+    - name: Point resolv.conf away from stub
+      file:
+        src: /run/systemd/resolve/resolv.conf
+        dest: /etc/resolv.conf
+        state: link
+        force: yes
+
     - name: Set default as DNS operational mode
       ini_file:
         path: /etc/NetworkManager/NetworkManager.conf
